<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:title="@string/app_name"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivZone"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:src="@drawable/ils_afc"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_zone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvZone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:fontFamily="@font/lato"
                    android:layout_weight="1"
                    tools:text="This league is in AFC Zone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/learnBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/more_btn"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp"/>
            </LinearLayout>

            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/header_title_main"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/ivBackLeague"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
            </FrameLayout>


            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dotsColor="@android:color/darker_gray"
                app:selectedDotColor="@android:color/black"
                app:dotsSize="8dp"
                android:layout_gravity="center"
                app:dotsSpacing="5dp"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato"
                android:text="@string/info"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>





</LinearLayout>